# potruler

./: .gitignore  Cargo.toml  README.md  rustfmt.toml
.cargo/: config.toml
docs/: wiring.md
firmware/: Cargo.toml
firmware/engine/: Cargo.toml
firmware/engine/src/: lib.rs
firmware/engine/src/core/: error.rs  reflex.rs
firmware/engine/src/hardware/: chassis.rs  led.rs
firmware/engine/src/hardware/sensors/: distance.rs  encoder.rs  mod.rs
firmware/engine/src/protocol/: bus.rs  mod.rs
firmware/robot/: Cargo.toml
firmware/robot/src/: main.rs
firmware/src/: lib.rs
firmware/src/core/: control.rs  mod.rs
firmware/src/hardware/: led.rs  mod.rs
firmware/src/hardware/sensors/: cliff.rs  distance.rs  mod.rs
protocol/: Cargo.toml
protocol/src/: channels.rs  command.rs  lib.rs  movements.rs  sensors.rs
robot/: Cargo.toml
robot/src/: main.rs
