[package]
name = "robot"
version = "0.1.0"
edition = "2021"
resolver = "2"

[dependencies]
firmware = { path = "../firmware" }
protocol = { path = "../protocol" }

log.workspace = true
static_cell.workspace = true

# Esp related crates
esp-hal = { workspace = true, features = ["esp32c3", "unstable", "rt"] }
esp-println = { version = "0.16", default-features = false, features = ["esp32c3", "log-04", "uart"] }
esp-backtrace = { version = "0.18", default-features = false, features = ["panic-handler", "println", "esp32c3"] }
esp-bootloader-esp-idf = { version = "0.4", features = ["esp32c3"] }

# Async with embassy
embassy-executor = { version = "0.9", features = [] }
esp-rtos = { version = "0.2.0", features = ["esp32c3", "embassy"] }
