[package]
name = "robot"
version = "0.1.0"
edition = "2021"
resolver = "2"

[dependencies]
firmware = { path = "../firmware" }
protocol = { path = "../protocol" }

embassy-stm32 = { workspace = true }
embassy-executor = { workspace = true }

defmt.workspace = true
defmt-rtt.workspace = true
panic-probe = { version = "1", features = ["print-defmt"] }

cortex-m-rt = { version = "0.7" }
cortex-m = { version = "0.7.7", features = ["inline-asm", "critical-section-single-core"] }

embedded-hal-bus.workspace = true
